# verkkokauppa

./: README.md  tasks.md
backend/: Cargo.toml  requirements.txt
backend/alembic/: env.py
backend/backend/: __init__.py  __main__.py  crud.py  db.py  login.py  models.py  routes.py  schemas.py  utils.py
backend/backend/database/: __init__.py  models.py  operations.py  populate.py
backend/src/: main.rs  routes.rs
backend/src/models/: items.rs  mod.rs
frontend/: package.json
frontend/src/: context.ts  index.tsx  models.ts  store.ts
frontend/src/components/: App.tsx  Cart.tsx  CenteredModal.tsx  CredentialModal.tsx  GridLayout.tsx  ItemCard.tsx  TopBar.tsx  index.tsx
frontend/src/utils/: customHooks.tsx  models.ts
frontend/src/views/: App.tsx  Cats.tsx  Home.tsx  Items.tsx  Products.tsx
