[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies]
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
